# vehicle_service_management

./: DOCUMENTATION.md  README.md  license.txt  pyproject.toml
vehicle_service_management/: WORKFLOW.md  api.py  hooks.py
vehicle_service_management/module_def/vehicle_service_management/: vehicle_service_management.json
vehicle_service_management/public/: build.json
vehicle_service_management/public/css/: vehicle_service_management.css
vehicle_service_management/vehicle_service_management/doctype/consumed_spare/: consumed_spare.json  consumed_spare.py
vehicle_service_management/vehicle_service_management/doctype/delivery_checklist_item/: delivery_checklist_item.js  delivery_checklist_item.json  delivery_checklist_item.py
vehicle_service_management/vehicle_service_management/doctype/ev_battery_health/: __init__.py  ev_battery_health.js  ev_battery_health.json  ev_battery_health.py
vehicle_service_management/vehicle_service_management/doctype/inspection_item/: inspection_item.json  inspection_item.py
vehicle_service_management/vehicle_service_management/doctype/insurance_claim/: insurance_claim.json  (+1 more)
vehicle_service_management/vehicle_service_management/scripts/: populate_demo_data.py
vehicle_service_management/www/: admin_dashboard.html  admin_dashboard.py  book_service.html  book_service.py  delivery_checklist.html  ev_battery_health.html  index.html  index.py  mechanic_dashboard.html  mechanic_dashboard.py  paint_job_card.html  paint_job_card.py  service_tracking.html  service_tracking.py  vehicle_inspection.html  vehicle_inspection.py
(+37 files in other folders)
