[project]
name = "vehicle_service_management"
authors = [
    { name = "Balaji", email = "balaji@example.com" }
]
description = "Vehicle Service Management app for ERPNext V15"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
erpnext = ">=15.0.0,<16.0.0"
